5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1590_1016.log
== TEST (2019-03-23 19:56:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
sqrt(3,8,6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    sqrt(3,8,6)
TypeError: sqrt() takes exactly one argument (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:05:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input()
B = input()
C = input()




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    sqrt(3,8,6)
TypeError: sqrt() takes exactly one argument (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:06:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input(float())
B = input(float())
C = input(float())




-- OUTPUT:
0.00.00.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:06:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input(float())
B = input(float())
C = input(float())




-- OUTPUT:
0.00.00.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:08:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input(float())
B = input(float())
C = input(float())
p=(a+b+c)/2
G=(p(p-a)*(p-b)*(p-c))**1/2
print(area,G)




-- EXECUTION TIME:
0.191205
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 7, in <module>
    p=(a+b+c)/2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:09:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input()
B = input()
C = input()
A = float(A)
B = float(B)
C =float(C)
p=(a+b+c)/2
G=(p(p-a)*(p-b)*(p-c))**1/2
print(area,G)




-- EXECUTION TIME:
0.143815
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 10, in <module>
    p=(a+b+c)/2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:10:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input()
B = input()
C = input()
A = float(A)
B = float(B)
C =float(C)
p=(a+b+c)/2
G=(p(p-a)*(p-b)*(p-c))**1/2
print(area,G)




-- EXECUTION TIME:
0.148216
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 10, in <module>
    p=(a+b+c)/2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:23:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input()
B = input()
C = input()

p=(A+B+C)/2
G=(p(p-A)*(p-B)*(p-C))**1/2
print(round(G,5))




-- EXECUTION TIME:
0.163075
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 8, in <module>
    p=(A+B+C)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:23:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input()
B = input()
C = input()

p=(A+B+C)/2
G=(p(p-A)*(p-B)*(p-C))**1/2
print(round(G,5))




-- EXECUTION TIME:
0.153477
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 8, in <module>
    p=(A+B+C)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:23:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input()
B = input()
C = input()

p=(A+B+C)/2
G= sqrt((p(p-A)*(p-B)*(p-C)))
print(round(G,5))




-- EXECUTION TIME:
0.123491
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 8, in <module>
    p=(A+B+C)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:24:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input()
B = input()
C = input()

p=(A+B+C)/2
G= sqrt(p(p-A)*(p-B)*(p-C))
print(round(G,5))




-- EXECUTION TIME:
0.127237
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 8, in <module>
    p=(A+B+C)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:24:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input()
B = input()
C = input()

p=(A+B+C)/2
G= (p(p-A)*(p-B)*(p-C))**1//2
print(round(G,5))




-- EXECUTION TIME:
0.191096
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 8, in <module>
    p=(A+B+C)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:25:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input()
B = input()
C = input()

p=(A+B+C)/2
G= (p(p-A)*(p-B)*(p-C))**1/2
print(round(G,5))




-- EXECUTION TIME:
0.185609
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 8, in <module>
    p=(A+B+C)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:25:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input()
B = input()
C = input()
from math import *
p=(A+B+C)/2
G= sqrt((p(p-A)*(p-B)*(p-C)))
print(round(G,5))




-- EXECUTION TIME:
0.129628
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 8, in <module>
    p=(A+B+C)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:38:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = input()
B = input()
C = input()
from math import *
p=(A+B+C)/2
G= sqrt((p(p-A)*(p-B)*(p-C)))
print(round(G,5))




-- EXECUTION TIME:
0.176286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 8, in <module>
    p=(A+B+C)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:15:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
A = input()
B = input()
C = input()

p=(A+B+C)/2
G= sqrt((p*(p-A)*(p-B)*(p-C))
print(round(G,5))




-- EXECUTION TIME:
0.156479
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 11
    print(round(G,5))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:16:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
A = input()
B = input()
C = input()

p=(A+B+C)/2
G= float(sqrt(p*(p-A)*(p-B)*(p-C)))
print(round(G,5))




-- EXECUTION TIME:
0.151806
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1016/main.py", line 9, in <module>
    p=(A+B+C)/2
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:16:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
A = input()
B = input()
C = input()

p=(A+B+C)/2
G= float(sqrt(p*(p-A)*(p-B)*(p-C))
print(round(G,5))




-- EXECUTION TIME:
0.17744
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 11
    print(round(G,5))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:18:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
A = float(input())
B = float(input())
C = float(input())

p=(A+B+C)/2
G= float(sqrt(p*(p-A)*(p-B)*(p-C)))
print(round(G,5))




-- EXECUTION TIME:
0.136384
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
